<resources>
    <string name="app_name">ContactsApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textview">TextView</string>
    <string name="staff_name">Staff Name</string>
    <string name="id_123">ID : 123</string>
    <string name="id">ID</string>
    <string name="color">Favourite Color:</string>
    <string name="jobTittle">Job Tittle</string>
    <string name="email">Email Adress:</string>
    <string name="name">Name</string>
    <string name="date_created">Date Created:</string>
    <string name="todo">TODO</string>
    <string name="staff_list">Staff List</string>
    <string name="room_list">Room List</string>
    <string name="something_went_wrong">Something Went Wrong</string>
</resources>