<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="#F8ECEC"
    android:padding="2dp">


    <ImageView
        android:id="@+id/staff_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/staff_name"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/staff_imageView"
        app:layout_constraintStart_toStartOf="@id/staff_imageView"
        app:layout_constraintTop_toBottomOf="@+id/staff_imageView" />

    <TextView
        android:id="@+id/staffId_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_123"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/name_textview"
        app:layout_constraintStart_toStartOf="@id/name_textview"
        app:layout_constraintTop_toBottomOf="@id/name_textview" />
</androidx.constraintlayout.widget.ConstraintLayout>